# Homework25

./: main.py  pyproject.toml
Homework22/: Dockerfile  pyproject.toml
Homework22/hw_project/hw_project/: settings.py  urls.py
Homework22/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
Homework22/hw_project/quotes/migrations/: 0001_initial.py  0002_picture.py
Homework22/hw_project/quotes/static/quotes/: style.css
Homework22/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author_biography.html  author_detail.html  base.html  edit_picture.html  index.html  picture.html  quote_detail.html  quote_edit.html  quote_edit_deleted.html  tag_detail.html  upload.html
Homework22/hw_project/quotes/templatetags/: extract.py
Homework22/hw_project/users/: forms.py  urls.py  views.py
Homework22/hw_project/users/templates/users/: logout.html  password_reset.html  signin.html  signup.html
Homework22/hw_project/utils/: add_quotes_to_nongodb.py  authors.json  migration.py  quotes.json
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 16390  16392  16399  (+6 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  role.py
templates/: index.html
