[tool.poetry]
name = "homework22"
version = "0.1.0"
description = ""
authors = ["AndriyBatig1992 <starickova.tan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pymongo = "^4.6.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
